--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    background-color:rgb(255, 255, 255)
 }
 body *{
     box-sizing: border-box;
@@ -8,14 +9,14 @@ body *{
     margin-top: 30px;
     width: 100vw;
     height: 71px;
-    background: linear-gradient(-90deg, #FFEFCF,#FF7A00,#ce6538,#c45f00);
+    background: linear-gradient(180deg, #ff8432,#FF7A00,#ce6538,#c45f00);
     background-size: 500% 100%;
     position: relative;
     display:flex;
     justify-content: center;
     align-items: center;
     border-radius: -10px;
-    animation: colors 5s ease infinite;
+    animation: colors 15s ease infinite;
 }
 .navigation ul{
     display: flex;
@@ -45,14 +46,14 @@ body *{
     font-size: 1.5em;
     text-align: center;
     transition: 0.2;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 .navigation ul li.active a .icon{
     transform: translateY(-35px);
 }
 .navigation ul li a .text{
     position: absolute;
-    color: black;
+    color: rgb(255, 255, 255);
     font-weight: 400;
     font-size: 0.75em;
     letter-spacing: 0.05em;
@@ -114,12 +115,12 @@ transform: translateY(10px);
 .main-login{
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(-90deg, #FFEFCF,#FF7A00,#ce6538,#c45f00);
+    background: linear-gradient(0deg, #ffffff,#FF7A00,#ce6538,#c45f00);
     background-size:500% 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: colors 5s ease infinite;
+    animation: colors 15s ease infinite;
 }
 .left-login{
     width: 50vw;
@@ -131,10 +132,9 @@ transform: translateY(10px);
 }
 .left-login > h1{
     font-size: 3vw;
-    font-family: monospace;
-    letter-spacing: 0.5rem;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-shadow: 0px 10px 40px rgba(32, 18, 0, 0.637);;
 }
 .left-login-image{
@@ -159,7 +159,7 @@ transform: translateY(10px);
     align-items: center;
     flex-direction: column;
     padding: 30px 35px;
-    background: rgba(233, 233, 233, 0.589);
+    background: rgba(233, 233, 233, 0.774);
     border-radius: 20px;
     box-shadow: 0px 10px 40px black;
 }
@@ -246,4 +246,65 @@ transform: translateY(10px);
     .card-login{
         width: 90%;
     }
+}
+section{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 50px;
+    background: rgb(255, 255, 255);
+    border-radius:10px;
+}
+section h2{
+    font-size: 2.5em;
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 10px 40px black;
+}
+section p{
+    font-size: 1.2em;
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 8px 20px black;;
+}
+::-webkit-scrollbar
+{
+    width: 0;
+}
+#scrollPath
+{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 10px;
+    height: 100%;
+    background: rgba(255,255,255,0.05);
+}
+#progressbar
+{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 10px;
+    height: 100%;
+    background: linear-gradient(to top, #008aff,#00ffe7);
+    animation: animate 5s linear infinite;
+}
+@keyframes animate
+{
+    0%,100%
+    {
+        filter:hue-rotate(0deg)
+    }
+    50%
+    {
+        filter:hue-rotate(360deg)
+    }
+}
+#progressbar:before
+{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top, #008aff,#00ffe7,);
+
 }
