--- a/HTML/darkmode/css/dark_style.css
+++ b/HTML/darkmode/css/dark_style.css
@@ -249,27 +249,33 @@ transform: translateY(10px);
         width: 90%;
     }
 }
-section{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 10px;
-    background:rgb(26, 21, 44);
+.fade_gradient{ 
     width: 100vw;
-    height: 100vh;
+    height: 5vh;
+    background: linear-gradient(90deg, #170055,#4d2cb3,#AE00FB,#86e4b2);
+    background-size:300% 100%;
+    animation: colors 8s ease infinite;
+    box-shadow:0px -10px 25px rgb(0, 0, 0);
 }
-section h2{
+section{
+    flex-direction: column;
+    width: 100vw;
+    background: linear-gradient(0deg,rgb(26, 21, 44),rgb(26, 21, 44),rgb(15, 8, 32));
+    background-size:500% 100%;
+    display: flex;
     justify-content: center;
     align-items: center;
+}
+section h2{
     display: flex;
+    justify-content: center;
     font-size: 2.5em;
     color: white;
     text-shadow: 0px 10px 50px rgb(255, 255, 255);
 }
 section p{
-    justify-content: center;
-    align-items: center;
     display: flex;
+    justify-content: center;
     font-size: 1.2em;
     color: white;
     text-shadow: 0px 10px 50px rgba(255, 255, 255, 0.473);
